gitops/platform/network-policies/allow-argocd-to-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-argocd-to-apiserver
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app: argocd-application-controller
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
