gitops/platform/network-policies/allow-traefik-to-argocd.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traefik-to-argocd
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app: argocd-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
